<resources>
    <string name="app_name">E-shop</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="choose_image">Choose Image</string>
    <string name="add">Add</string>
    <string name="view_all">View all</string>
    <string name="done">Done</string>
    <string name="closer_to_you">E-shop</string>
    <string name="saved_money">You Saved 1000 $</string>
    <string name="button_choose_image">Choose Image</string>
    <string name="button_done">Done</string>
    <string name="textview_offer_description">Offer Description</string>
    <string name="textview_offer_name">Offer Name</string>
    <string name="textview_product_name">Product Name</string>
    <string name="textview_product_quantity">Product Quantity</string>
    <string name="textview_product_price">Product Price</string>
    <string name="textview_product_expiration_date">Product Expiration date</string>
    <string name="textview_salesman_name">SalesMan Name</string>
    <string name="textview_salesman_salary">SalesMan Salary</string>
    <string name="textview_done">Done</string>
    <string name="textview_choose_image">Choose Image</string>
    <string name="button_send_password_to_email">Send Password To Email</string>
    <string name="EditText_please_enter_your_username_or_email">Please Enter Your Username Or Email</string>
    <string name="ButtonText_add_to_cart">Add To Cart</string>
    <string name="TextView_sign_up">Sign up</string>
    <string name="TextView_text_email">Email</string>
    <string name="TextView_text_username">Username</string>
    <string name="TextView_text_password">Password</string>
    <string name="TextView_text_retype_password">Retype Password</string>
    <string name="TextView_text_phone_number">Phone Number</string>
    <string name="TextView_text_sign_up">Sign up</string>
    <string name="TextView_text_have_account_sign_in">have account? Sign In</string>
    <string name="Button_text_confirm">Confirm</string>
    <string name="Button_text_clear">Clear</string>
    <string name="TextView_totalPrice_text">2000 $</string>
    <string name="TextView_text_totalPiceTitle">Total Price</string>
    <string name="TextView_text_delete_from_my_cart">Delete From my Cart</string>
    <string name="TextView_product_title_text">Product</string>
    <string name="TextView_coupon_text">Free Coupon</string>
    <string name="TextView_price_text">2000 $</string>
    <string name="TextView_cut_price_text">3000 $</string>
    <string name="TextView_offer_text">Offer Applied</string>
    <string name="TextView_couponApplied_text">Coupon Applied</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="products">Products</string>
    <string name="offers">Offers</string>
    <string name="logout_menu">Logout</string>
    <string name="categories">Categories</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="meats">Meats</string>
    <string name="electronics">Electronics</string>
    <string name="order_details">Order Details</string>
    <string name="date">Date :</string>
    <string name="number_of_products">Number of Products :</string>
    <string name="total_price">Total Price</string>
    <string name="products_text">Products :</string>
    <string name="order_pending">Order: Pending</string>
    <string name="gpl_title">Title</string>
    <string name="fmc_no_products_exist">No Products Exist</string>
    <string name="aup_info">Info</string>
    <string name="aup_my_favorites">My Favorites</string>
    <string name="aup_my_orders">My Orders</string>
    <string name="acc_order_details">Order Details</string>
    <string name="acc_price">Price</string>
    <string name="acc_delivery">Delivery</string>
    <string name="acc_total_amount">Total Amount</string>
    <string name="acc_order">Order</string>
    <string name="acc_cancel">Cancel</string>
    <string name="aap_name">Name</string>
    <string name="aap_quantity">Quantity</string>
    <string name="aap_price">Price</string>
    <string name="aap_expiration_date">Expiration date</string>
    <string name="aao_offer_name">Offer Name</string>
    <string name="aao_offer_description">Offer Description</string>
    <string name="aao_add">Add</string>
    <string name="aao_choose_image">Choose Image</string>
    <string name="message_do_you_want_to_logout">Do you want to logout?</string>
    <string name="message_button_no">No</string>
    <string name="message_button_yes">Yes</string>
    <string name="alert_dialog__logout">Logout</string>
    <string name="cart_activity__my_cart">My cart</string>
    <string name="admin_activity__admin_control">Admin Control</string>
    <string name="admin_activity__all_products">All Products</string>
    <string name="admin_activity__all_offers">All Offers</string>
    <string name="admin_add_offer_activity__add_offer">Add Offer</string>
    <string name="admin_add_offer_activity__upload_is_in_progress">Upload Is In Progress</string>
    <string name="admin_add_offer_activity__empty_cells">Empty Cells</string>
    <string name="admin_add_offer_activity__added_successfully">Added Successfully</string>
    <string name="admin_add_product_activity__add_product">Add Product</string>
    <string name="error__please_enter_offer_name">Please Enter Offer Name</string>
    <string name="admin_add_product_activity__upload_is_in_progress">Upload Is In Progress</string>
    <string name="admin_add_product_activity__empty_cells">Empty Cells</string>
    <string name="admin_add_product_activity__upload_succesfully">Uploaded Successfully</string>
    <string name="do_you_want_to_add_this_nproduct_to_your_cart">Do you Want to Add this\nproduct to your cart ?</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="piaListItemProductName">Product Name</string>
    <string name="piaListItemProductPrice">Product Price</string>
    <string name="piaListItemProductImage">Product Image</string>
    <string name="piaListItemProductExpiryDate">Product ExpiryDate</string>
    <string name="piaListItemProductIsFavorite">Product IsFavorite</string>
    <string name="piaListItemProductIsOffered">Is Offered</string>
    <string name="piaListItemProduct">The Product Added Successfully to your Cart</string>
    <string name="piaListItemProductDeletedSuccessfully">The Product Deleted Successfully from your Cart</string>
    <string name="piaSetProductPrice">\"Price: \"</string>
    <string name="piaOfferRate">- 30%</string>
    <string name="piaSetProductExpiryDate">\"Expiry Date: \"</string>
    <string name="piaSetProductDateCategoryFruits">Category: Fruits</string>
    <string name="piaSetProductDateAvailableAmounts">\"Available Amounts: \"</string>
    <string name="piaSetProductDateCategoryElectronics">Category: Electronics</string>
    <string name="piaSetProductDateCategoryMeats">Category: Meats</string>
    <string name="piaSetProductDateCategoryVegetables">Category: Vegetables</string>
    <string name="navItemSelectedCategoryName">Category Name</string>
    <string name="checkLogoutMessage">Do you want to Logout?</string>
    <string name="checkLogoutAnswerYes">Yes</string>
    <string name="checkLogoutAnswerNo">No</string>
    <string name="checkLogoutTitle">Log Out</string>
    <string name="piaPageTitle">Product Info</string>
    <string name="upaSelectImage">SELECT IMAGE</string>
    <string name="suaEmptyCells">Empty Cells</string>
    <string name="suaTextRequirePassword">you must write password in two boxes</string>
    <string name="suaTextRegisteredSuccessfully">Registered Successfully</string>
    <string name="suaTextRegistrationFailed">registration failed</string>
    <string name="suaSelectImage">SELECT IMAGE</string>
    <string name="oaPageTitle">My Orders</string>
    <string name="maCategoryName">Category Name</string>
    <string name="constantsAdminBaseEmail">admin@gmail.com</string>
    <string name="faPageTitle">Favourites</string>
    <string name="epaTitle">Edit Product</string>
    <string name="epaViewTextName">name</string>
    <string name="epaViewTextOldName">name</string>
    <string name="epaViewTextQuantity">quantity</string>
    <string name="epaViewTextPrice">price</string>
    <string name="epaViewTextExpired">expired</string>
    <string name="epaViewTextoldImagePath">img</string>
    <string name="epaViewTextOldCategory">category</string>
    <string name="epaToastUploadIsInProgress">Upload Is In Progress</string>
    <string name="epaDialogTitleConfirmation">Confirmation</string>
    <string name="epaDialogMessage">Are You Sure You Want To Save ?!</string>
    <string name="epaDialogPositiveButton">Yes</string>
    <string name="epaDialogNegativeButton">No</string>
    <string name="epaUploadImageToastUploadedSuccessfully">Uploaded Successfully</string>
    <string name="fpaFieldIsEmpty">Field Is Empty</string>
    <string name="eoaEditOffer">Edit Offer</string>
    <string name="eoaViewTextName">name</string>
    <string name="eoaViewTextDescription">description</string>
    <string name="eoaUploadIsInProgress">Upload Is In Progress</string>
    <string name="eoaDialogTitle">Confirmation</string>
    <string name="eoaDialogMessage">Are You Sure You Want To Save ?!</string>
    <string name="eoaDialogPositive">Yes</string>
    <string name="eoaDialogNegative">No</string>
    <string name="eoaUploadDataToastText">Empty Cells</string>
    <string name="intentStringExtraCategoryName">Category Name</string>
    <string name="intentStringExtraCategoryFruits">Fruits</string>
    <string name="intentStringExtraCategoryVegetables">Vegetables</string>
    <string name="intentStringExtraCategoryMeats">Meats</string>
    <string name="intentStringExtraCategoryElectronics">Electronics</string>
    <string name="laEmailValidationRequired">Email is required</string>
    <string name="laPasswordValidationRequired">Password is required</string>
    <string name="laPasswordValidationMustBeBiggerLength">Password must be bigger than or equal 6 characters</string>
    <string name="constantsAdminBasePassword">password</string>
    <string name="laToastCreator">Welcome My Creator</string>
    <string name="laToastBase">Logged in Successfully</string>
    <string name="laToastError">Wrong User name Or Password</string>
    <string name="caClickAnyProductProductName">Product Name</string>
    <string name="caClickAnyProductProductPrice">Product Price</string>
    <string name="caClickAnyProductProductImage">Product Image</string>
    <string name="caClickAnyProductProductExpiryDate">Product ExpiryDate</string>
    <string name="caClickAnyProductProductIsFavorite">Product IsFavorite</string>
    <string name="caClickAnyProductProductIsOffered">Is Offered</string>
    <string name="ccaPageTitle">Check Order</string>
    <string name="intentStringExtraProductName">Product Name</string>
    <string name="intentStringExtraProductPrice">Product Price</string>
    <string name="intentStringExtraProductImage">Product Image</string>
    <string name="intentStringExtraProductExpiryDate">Product ExpiryDate</string>
    <string name="intentStringExtraProductIsFavorite">Product IsFavorite</string>
    <string name="intentStringExtraIsOffered">Is Offered</string>
</resources>