<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MyCartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/Cart_container"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/NoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Products Exist"
        android:textSize="22dp"
        android:visibility="gone"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/Cart_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/container2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/totalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextView_totalPrice_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextView_text_totalPiceTitle"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/cart_confirmbtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/Button_text_confirm"
            android:textColor="#616161"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cart_clearbtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/Button_text_clear"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>